Ansible script now install docker and does hello world --ch12l001--

--- a/infra/deploy-playbook.yaml
+++ b/infra/deploy-playbook.yaml
@@ -1,4 +1,19 @@
+---
 - hosts: all
+
   tasks:
-    - name: Ping to make sure we can talk to our server
-      ansible.builtin.ping:
+
+    - name: Install docker
+      ansible.builtin.apt:
+        name: docker.io
+        state: latest
+        update_cache: true
+      become: true
+
+    - name: Run test container
+      community.docker.docker_container:
+        name: testcontainer
+        state: started
+        image: busybox
+        command: echo hello world
+      become: true
