add stanza to build linux/amd64 explicitly

--- a/infra/ansible-provision.yaml
+++ b/infra/ansible-provision.yaml
@@ -8,6 +8,17 @@
         state: latest
       become: true
 
+    - name: Build container image locally
+      community.docker.docker_image:
+        name: superlists
+        source: build
+        state: present
+        build:
+          path: ..
+          platform: linux/amd64
+        force_source: true
+      delegate_to: 127.0.0.1
+
     - name: Export container image locally
       community.docker.docker_image:
         name: superlists
